[package]
name = "matchmaker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matchmaker"
path = "src/main.rs"

[dependencies]
tokio           = { version = "1",   features = ["full"] }
axum            = { version = "0.7", features = ["json"] }
dashmap         = "5"
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
parking_lot     = "0.12"
tower-http      = { version = "0.5", features = ["cors"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid            = { version = "1",   features = ["v4"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1